# regroove

./: .gitignore  CMakeLists.txt  SDL3  audio_input.c  audio_input.h  input_mappings.c  input_mappings.h  lcd.c  lcd.h  main-gui.cpp  main-tui.c  master.ini  midi.c  midi.h  midi_android_compat.cpp  midi_handler_android.cpp  midi_mmc.c  midi_mmc.h  midi_output.c  midi_output.h  midi_sysex.c  midi_sysex.h  package-windows.sh  regroove_common.c  regroove_common.h  regroove_effects.c  regroove_effects.h  regroove_engine.c  regroove_engine.h  regroove_metadata.c  regroove_metadata.h  regroove_performance.c  regroove_performance.h  regroove_phrase.c  regroove_phrase.h  slave.ini  sysex.c  sysex.h
android/: build-libopenmpt-android.sh  build.gradle  gradle.properties  settings.gradle  setup-libopenmpt.sh
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/nl/gbraad/regroove/: AudioService.java  FilePicker.java  MainActivity.java  MidiHandler.java
android/app/src/main/res/values/: strings.xml
imgui/: imgui.cpp  imgui.h  imgui_internal.h
imgui/backends/: imgui_impl_sdl3.cpp
